# tree

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPTIMIZATION_PLAN.md  PACKAGING_PLAN.md  PLAN.md  PRODUCTIZATION_PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: archivist.md  content-architect.md  evidence-based-student.md  examiner.md  faithfulness-examiner.md  student.md  writer.md
.codex/agents/: archivist.toml  examiner.toml  student.toml  writer.toml
.github/workflows/: ci.yml  release.yml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  i18n.ts  main.tsx  styles.css  types.ts  useProgress.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Brand.tsx  DagWorkbench.tsx  Materials.tsx  Outputs.tsx  ProgressPanel.tsx  ProjectLibrary.tsx  Reader.tsx  Settings.tsx  SetupForm.tsx  illustrations.tsx
desktop/src/lib/: dagCamera.test.ts  dagCamera.ts  export.ts  format.ts  grow.test.ts  grow.ts  recommendation.test.ts  recommendation.ts  useExport.ts
docs/: LEGACY-DESIGN.md  REBUILD-DESIGN.md
docs/superpowers/plans/: 2026-05-28-material-driven-tree-pipeline.md
finished_outputs/01. 化学平衡基础：平衡常数与自由能变化/: 01.化学平衡与平衡常数（分压表达）.md  02.平衡常数与标准自由能变化.md
ingest/: __init__.py  math_fix.py  ocr_engine.py  pipeline.py  requirements.txt  structurer.py
ingest/extractors/: __init__.py  docx_extractor.py  image_extractor.py  pdf_extractor.py
ingest/prompts/: structurer.txt
packaging/: build_sidecar.sh  check_mypy_baseline.py  release-constraints.txt  release_doctor.py  release_macos.sh  sign_sidecar_macos.mjs  test_local.sh  tre-engine.spec  tre_entry.py
poster/: AI Agent结题＋新编旦（Dawn Draft）＋TREE 教材重构增强引擎-内容填充版.pptx  AI Agent结题＋新编旦（Dawn Draft）＋TREE 教材重构增强引擎.pptx  README.md  未来智造（AI Agent）工程师训练营结题海报模板.pptx
rag/: chunker.py  embed.py  server.py
scripts/: run-ingest.sh  setup-embedding.sh  start-embed-server.bat  start-embed-server.sh
tests/: test_agents.py  test_branch_planner.py  test_branch_run.py  test_candidate_nodes.py  test_chapter_naming.py  test_chunker.py  test_cli_theme.py  test_cli_tree_view.py  test_config_security.py  test_dag.py  test_dag_svg.py  test_embedding_model_cache.py  test_embedding_service.py  test_file_ops.py  test_foundation.py  test_gui.py  test_ingest_archivist_fallback.py  test_knowledge_graph_planner.py  test_llama_server.py  test_llm_client.py  test_manifest.py  test_model_client.py  test_mtu.py  test_ocr_engine.py  test_operation_log.py  test_parsers.py  test_pipeline.py  test_pipeline_resilience.py  test_pipeline_runtime.py  test_process.py  test_progress.py  test_progress_state.py  test_prompt_alignment.py  test_prompts.py  test_rag_client.py  test_rag_runtime.py  test_retry.py  test_schedule.py  test_semantic_planner_rebuild.py  test_step8_cli.py  (+5 more)
tree/: __init__.py  cli.py  config.py  engine.py  ingest.py
tree/agents/: archivist.py  examiner.py  loader.py  parsers.py  prompts.py  student.py  writer.py
tree/deepseek/: client.py
tree/io/: file_ops.py  git_ops.py  source_ops.py
tree/observability/: limiter.py  logger.py  retry.py
tree/rag/: __init__.py  client.py  indexer.py
tree/state/: manager.py  models.py
tree_engine/docs/: candidate-node-generator-refactor.md  deterministic-tree-planner-refactor.md  incremental-forest-planner-refactor.md  knowledge-graph-refactor.md  project-workflow 2.html  project-workflow.html
tree_engine/docs/test-reports/: 2026-05-30-chem-tree-run.md
tree_engine/ingest/: ocr_engine.py  pipeline.py  structurer.py
tree_engine/ingest/extractors/: pdf_extractor.py  presentation_extractor.py
tree_engine/rag/: chunker.py  server.py
tree_engine/scripts/: bootstrap.ps1  bootstrap.sh  run-ingest.sh  setup-embedding.sh  start-embed-server.bat  start-embed-server.sh
tree_engine/tree/: __init__.py  cli.py  config.py  engine.py  ingest.py  learning.py  services.py
tree_engine/tree/agents/: archivist.py  base.py  context.py  dagger.py  examiner.py  loader.py  parsers.py  prompts.py  schemas.py  student.py  writer.py
(+89 files in other folders)
