[project]
name = "tree-engine"
version = "0.3.5"
description = "T.R.E.E. material-driven exam-driven textbook generation engine (rebuild)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pypdf>=5.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# Portable RAG stack: vector store + model-cache discovery. Works on all
# platforms (incl. native Windows) and is enough to run the pipeline against
# any OpenAI-compatible embeddings endpoint (e.g. a local Ollama server).
rag = [
    "qdrant-client>=1.14.0",
    "huggingface-hub>=0.20.0",
]
# Self-hosted local embedding server (tree.rag.server). Pulls native deps that
# are painful on native Windows; Windows users should prefer an external
# endpoint via EMBED_API_URL instead of installing this.
local-embed = [
    "llama-cpp-python>=0.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]
# Local browser GUI (tre gui): FastAPI + server-rendered HTML + htmx.
# `websockets` gives uvicorn a WebSocket implementation for /ws/progress;
# without it uvicorn rejects the upgrade and live progress can't connect.
gui = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tre = "tree.cli.app:app"
tree-run = "tree.cli.app:app"

[tool.setuptools.package-dir]
"" = "tree_engine"

[tool.setuptools.packages.find]
where = ["tree_engine"]
include = ["tree*"]

[tool.setuptools.package-data]
"tree.gui" = ["templates/*.html", "static/*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["tree_engine"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
